--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ li{
 /* MENU */
 
 .bg-menu{
-    max-width: 1600px;
     max-height: 105px;
     background-color: #0E0E0E;
     display: grid;
@@ -55,7 +54,7 @@ li{
 .menu li a{
     font-family: fira sans, Arial, Helvetica, sans-serif;
     color: #F2F7FF;
-    font-size: 1.2em;
+    font-size: 1.2rem;
     transition: 0.4ms ease-in-out;
 }
 
@@ -104,7 +103,7 @@ li{
         padding: 8px 5px;       
     }
     .menu li a{
-        font-size: 1em;
+        font-size: 1rem;
     }
 }
 
@@ -184,7 +183,7 @@ li{
 }
 
 #language{
-    font-size: 1.2em;
+    font-size: 1.2rem;
     margin: 20px;
     background-color: #0E0E0E;
     color: #B3B3B3;
@@ -239,7 +238,7 @@ li{
 .home p{
     font-family: fira sans, Arial, Helvetica, sans-serif;
     font-weight: lighter;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     color: #F2F7FF;
     grid-column: 2;
     grid-row: 3;
@@ -266,7 +265,7 @@ li{
 
 .chat a{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 0.8em;
+    font-size: 0.8rem;
     color: #F2F7FF;
     font-weight: 400;
     text-align: center;
@@ -330,11 +329,11 @@ li{
     }
     
     .home p{
-        font-size: 1.3em;   
+        font-size: 1.3rem;   
     }
 
     .chat a{
-        font-size: 0.7em;
+        font-size: 0.7rem;
     }
     
     .wpp img{
@@ -374,7 +373,7 @@ li{
     }
 
     .chat a{
-        font-size: 0.8em;
+        font-size: 0.8rem;
     }
     
     .wpp img{
@@ -405,7 +404,7 @@ li{
     }
 
     .chat a{
-        font-size: 0.7em;
+        font-size: 0.7rem;
     }
     
     .wpp img{
@@ -413,11 +412,11 @@ li{
     }
 
     .home p{
-        font-size: 1.2em;
+        font-size: 1.2rem;
     }
 
     #language{
-        font-size: 1em;
+        font-size: 1rem;
         margin-bottom: 0px;
     }
 }
@@ -449,7 +448,7 @@ li{
     }
 
     .chat a{
-        font-size: 0.6em;
+        font-size: 0.6rem;
     }
     
     .wpp img{
@@ -457,7 +456,7 @@ li{
     }
 
     .home p{
-        font-size: 1em;
+        font-size: 1rem;
     }
 
     .chat{
@@ -504,7 +503,7 @@ li{
     }
 
     .chat a{
-        font-size: 0.6em;
+        font-size: 0.6rem;
     }
     
     .wpp img{
@@ -512,7 +511,7 @@ li{
     }
 
     .home p{
-        font-size: 0.9em;
+        font-size: 0.9rem;
         padding-bottom: 10px;
     }
 }
@@ -553,14 +552,14 @@ li{
 
 .dados h1{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 1.75em;
+    font-size: 1.75rem;
     color: #F2F7FF;
 }
 
 .dados a button{
     font-family: fira sans, Arial, Helvetica, sans-serif;
     color: #F2F7FF;
-    font-size: 0.75em; 
+    font-size: 0.75rem; 
     font-weight: 600;  
     background-color: #5793ED;
     border: 2px solid #F2F7FF;
@@ -606,7 +605,7 @@ li{
 .id h2{
     font-family: fira sans, Arial, Helvetica, sans-serif;
     color: #717171;
-    font-size: 0.75em;
+    font-size: 0.75rem;
     text-transform: uppercase;
     margin-bottom: -3px;
 }
@@ -614,7 +613,7 @@ li{
 .id p{
     font-family: fira sans, Arial, Helvetica, sans-serif;
     color: #F2F7FF;
-    font-size: 1.1em;
+    font-size: 1.1rem;
     margin-top: -3px;
 }
 
@@ -631,7 +630,7 @@ li{
 
 .paragrafo{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 1.1em;
+    font-size: 1.1rem;
     color: #F2F7FF;
     text-align: end;
 
@@ -659,7 +658,7 @@ li{
 
 .work h1{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 2em;
+    font-size: 2rem;
     color: #F2F7FF;
     font-weight: 600;
     text-align: end;
@@ -680,7 +679,7 @@ li{
 }
 
 .texto-icon{
-  font-size: 1em;
+  font-size: 1rem;
   color: #5793ED;
   opacity: 0; 
   font-family: fira sans, Arial, Helvetica, sans-serif;
@@ -700,7 +699,7 @@ li{
     }
 
     .paragrafo{
-        font-size: 1em;
+        font-size: 1rem;
         padding-left: 30px;
     }
 
@@ -710,7 +709,7 @@ li{
     }
 
     .work h1{
-        font-size: 1.8em;
+        font-size: 1.8rem;
     }
 }
 
@@ -720,12 +719,12 @@ li{
     }
 
     .paragrafo{
-        font-size: 0.9em;
+        font-size: 0.9rem;
         padding-left: 30px;
     }
 
     .work h1{
-       font-size: 1.3em;
+       font-size: 1.3rem;
     }
 
     .work ul{
@@ -738,7 +737,7 @@ li{
     }
 
     .dados h1{
-        font-size: 1.5em;
+        font-size: 1.5rem;
     }
 
     .icon-id{
@@ -747,7 +746,7 @@ li{
     }
 
     .id p{
-        font-size: 1em;
+        font-size: 1rem;
     } 
 }
 
@@ -780,7 +779,7 @@ li{
     }
 
     .paragrafo{
-        font-size: 1em;
+        font-size: 1rem;
     }
 }
 
@@ -795,11 +794,11 @@ li{
     }
 
     .id p{
-        font-size: 0.9em;
+        font-size: 0.9rem;
     }
 
     .id h2{
-        font-size: 0.6em;
+        font-size: 0.6rem;
     }
 
     .bg-id{
@@ -825,7 +824,7 @@ li{
 
     .dados a button{
         padding: 8px 16px;
-        font-size: 0.6em;
+        font-size: 0.6rem;
     }
 
     .icon_item img{
@@ -833,7 +832,7 @@ li{
     }
 
     .texto-icon{
-        font-size: 0.8em;
+        font-size: 0.8rem;
     }
 
     .bg-about{
@@ -904,7 +903,7 @@ li{
     grid-column: 1/-1;
     justify-self: center;
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    font-size: 1rem;
     color: #F2F7FF;
 }
 
@@ -922,7 +921,7 @@ li{
 
 .job-card p{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 0.7em;
+    font-size: 0.7rem;
     color: #F2F7FF;
     text-align: center;
     grid-column: 1;
@@ -949,7 +948,7 @@ li{
 
 .job-card h1{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 2em;
+    font-size: 2rem;
     color: #F2F7FF;
     justify-items: center;
 }
@@ -1014,7 +1013,7 @@ li{
 
 .title{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: 600;
     color: #717171;
     margin-left: -24px;
@@ -1022,35 +1021,35 @@ li{
 
 .ads h2, .ads p, .physical p, .physical h2{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 0.7em;
+    font-size: 0.7rem;
     color: #717171;
     padding: 10px 15px;
 }
 
 .ads h1, .physical h1{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 1.25em;
+    font-size: 1.25rem;
     color: #F2F7FF;
     padding:0 15px;
 }
 
 .ads span, .physical span{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 0.6em;
+    font-size: 0.6rem;
     color: #717171;
     padding: 0 15px;
 }
 
 .languages h1{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 1.25em;
+    font-size: 1.25rem;
     color: #F2F7FF;
     padding: 0 20px;
 }
 
 .bar, .level{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 0.8em;
+    font-size: 0.8rem;
     color: #717171;
     margin-left: 50px;
 }
@@ -1101,14 +1100,14 @@ li{
 
   .curso-nome{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    font-size: 1rem;
     font-weight: 400;
     color: #F2F7FF;
   }
 
   .horas{
     font-family: fira sans, Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    font-size: 1rem;
     color: #717171;
     text-align: end;
   }
@@ -1120,7 +1119,7 @@ li{
     background-color: #0E0E0E;
     border: none;
     color: #5793ED;
-    font-size: 2.5em;
+    font-size: 2.5rem;
     padding: 0 15px;
     cursor: pointer;
     border-radius: 50%;
@@ -1137,7 +1136,7 @@ li{
   }
   
   .slide-button:hover {
-    font-size: 2.8em;
+    font-size: 2.8rem;
     border: 1px solid #5793ED;
   }
   
