--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    max-width: 100vw;
 }
 
 a{
@@ -1038,7 +1039,7 @@ li{
     max-height:100vh;
     background-color: #0E0E0E;
     margin: 0 auto;
-    padding-bottom: 20px;
+    padding-bottom: 60px;
 }
 
 .edu-img, .edu-img img{
@@ -1298,5 +1299,185 @@ li{
         }
     }
 
+    /* FOOTER */
 
+    .bg-footer{
+        margin: 0 auto;
+        height: 250px;
+        background-color: #1A1A1A;
+        display: flex;
+        gap: 120px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .divisor-footer{
+        height: 150px;
+        width: 1px;
+        background: #5793ED;
+    }
+
+    .wid-footer{
+        width: 200px;
+        display: flex;
+        justify-content: end;
+    }
+
+    a .logo-footer{
+        max-width: 100px;
+    }
+
+    .redes-footer{
+        display: flex;
+        gap: 30px;
+    }
+
+    .redes-footer img{
+        max-width: 30px;
+        transition: 0.3s ease-in-out;
+    }
+
+    .redes-footer img:hover{
+        transform: translateY(-16px);
+        cursor: pointer;
+    }
+
+    .copy{
+        background-color: #1A1A1A;
+        text-align: center; 
+    }
+
+    .copy-text{
+        font-family: fira sans, Arial, Helvetica, sans-serif;
+        font-size: 1rem;
+        color: #717171;
+        margin: 0 auto;
+        padding-bottom: 15px;
+    }
+
+    .chat-footer{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        max-width: 400px;
+        
+    }
+
+    .chat-footer a{
+        background-color: #2E2E2E;
+        border: 1px solid #F2F7FF;
+        border-radius: 3px;
+        padding: 8px 16px;
+        font-size: 0.7rem;
+        font-family:  fira sans, Arial, Helvetica, sans-serif;
+        color: #F2F7FF;
+        text-align: center;
+        transition: 0.2s ease-in-out;
+    }
+
+    .wpp-icon-footer{
+        display: inline-block;
+        width: 15px;
+        height: 15px;
+        background-image: url(/IMG/Wpp\ Icon.svg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin-right: 8px;
+        vertical-align: middle;
+    }
+
+    .wpp-footer:hover .wpp-icon-footer{
+        background-image: url(/IMG/Wpp_Icon_blue.svg);
+    }
+    
+    .wpp-footer:hover{
+        border: 1px solid #5793ED;
+        background-color: #1A1A1A;
+        color: #5793ED;
+    }
+
+    .mail-icon-footer{
+        display: inline-block;
+        width: 15px;
+        height: 10px;
+        background-image: url(/IMG/mail_icon_wt.svg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin-right: 8px;
+        vertical-align: middle;
+    }
+
+    .email-footer:hover .mail-icon-footer{
+        background-image: url(/IMG/mail\ icon.svg);
+    }
+    
+    .email-footer:hover{
+        border: 1px solid #5793ED;
+        background-color: #1A1A1A;
+        color: #5793ED;
+    }
+
+    @media (max-width: 1080px){
+        .bg-footer{
+            gap: 80px;
+        }
+
+        .redes-footer{
+            gap: 20px;
+        }
+    }
+
+    @media (max-width: 870px){
+        .bg-footer{
+            gap: 60px;
+        }
+
+        .wid-footer{
+            width: 180px
+        }
+    
+        a .logo-footer{
+            max-width: 80px;
+        }
+    
+        .redes-footer{
+            display: flex;
+            gap: 20px;
+        }
+    
+        .redes-footer img{
+            max-width: 25px;
+        }
+
+        .divisor-footer{
+            height: 120px;
+        }
+    }
+
+    @media (max-width: 768px){
+        .bg-footer{
+            flex-direction: column;
+            gap: 20px;
+            padding: 10px 0px;
+        }
+
+        .divisor-footer{
+            display: inline-block;
+            height: 2px;
+            width: 180px;
+        }
+
+        .wid-footer{
+            max-width: 200px;
+            justify-content: center;
+            padding-top: 10px;
+        }
+
+        .copy-text{
+            font-size: 0.8rem;
+            padding-top: 10px;
+        }
+    }
 
