--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ li{
     
 }
 .menu li a{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     color: #F2F7FF;
     font-size: 1.2rem;
     transition: 0.4ms ease-in-out;
@@ -237,7 +237,7 @@ li{
 }
 
 .home p{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-weight: lighter;
     font-size: 1.5rem;
     color: #F2F7FF;
@@ -265,7 +265,7 @@ li{
 }
 
 .chat a{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 0.8rem;
     color: #F2F7FF;
     font-weight: 400;
@@ -563,13 +563,13 @@ li{
 }
 
 .dados h1{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 1.75rem;
     color: #F2F7FF;
 }
 
 .dados a button{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     color: #F2F7FF;
     font-size: 0.75rem; 
     font-weight: 600;  
@@ -615,7 +615,7 @@ li{
 }
 
 .id h2{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     color: #717171;
     font-size: 0.75rem;
     text-transform: uppercase;
@@ -623,7 +623,7 @@ li{
 }
 
 .id p{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     color: #F2F7FF;
     font-size: 1.1rem;
     margin-top: -3px;
@@ -641,7 +641,7 @@ li{
 }
 
 .paragrafo{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 1.3rem;
     color: #F2F7FF;
     text-align: end;
@@ -669,7 +669,7 @@ li{
 }
 
 .work h1{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 2rem;
     color: #F2F7FF;
     font-weight: 600;
@@ -694,7 +694,7 @@ li{
   font-size: 1rem;
   color: #5793ED;
   opacity: 0; 
-  font-family: fira sans, Arial, Helvetica, sans-serif;
+  font-family: 'fira sans', Arial, Helvetica, sans-serif;
   font-weight: 400;
   text-align: center;
   transform: translateY(10px);
@@ -916,7 +916,7 @@ li{
 .job-card h2{
     grid-column: 1/-1;
     justify-self: center;
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 1rem;
     color: #F2F7FF;
 }
@@ -934,7 +934,7 @@ li{
 }
 
 .job-card p{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 0.7rem;
     color: #F2F7FF;
     text-align: center;
@@ -961,7 +961,7 @@ li{
 }
 
 .job-card h1{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 2rem;
     color: #F2F7FF;
     justify-items: center;
@@ -1112,7 +1112,7 @@ li{
 }
 
 .title{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 1rem;
     font-weight: 600;
     color: #717171;
@@ -1120,35 +1120,35 @@ li{
 }
 
 .ads h2, .ads p, .physical p, .physical h2{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 0.7rem;
     color: #717171;
     padding: 10px 15px;
 }
 
 .ads h1, .physical h1{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 1.25rem;
     color: #F2F7FF;
     padding:0 15px;
 }
 
 .ads span, .physical span{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 0.6rem;
     color: #717171;
     padding: 0 15px;
 }
 
 .languages h1{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 1.25rem;
     color: #F2F7FF;
     padding: 0 20px;
 }
 
 .bar, .level{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 0.8rem;
     color: #717171;
     margin-left: 50px;
@@ -1199,14 +1199,14 @@ li{
   }
 
   .curso-nome{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 1rem;
     font-weight: 400;
     color: #F2F7FF;
   }
 
   .horas{
-    font-family: fira sans, Arial, Helvetica, sans-serif;
+    font-family: 'fira sans', Arial, Helvetica, sans-serif;
     font-size: 1rem;
     color: #717171;
     text-align: end;
@@ -1424,7 +1424,7 @@ li{
     }
 
     .copy-text{
-        font-family: fira sans, Arial, Helvetica, sans-serif;
+        font-family: 'fira sans', Arial, Helvetica, sans-serif;
         font-size: 1rem;
         color: #717171;
         margin: 0 auto;
@@ -1445,7 +1445,7 @@ li{
         border-radius: 3px;
         padding: 8px 16px;
         font-size: 0.7rem;
-        font-family:  fira sans, Arial, Helvetica, sans-serif;
+        font-family:  'fira sans', Arial, Helvetica, sans-serif;
         color: #F2F7FF;
         text-align: center;
         transition: 0.2s ease-in-out;
